<resources>
    <string name="app_name">전희주 시</string>
    <string name="title01">별 헤는 밤</string>

    <string name="author01">윤동주</string>

    <string name="img01">stars</string>
    <string name="body01">
계절이 지나가는 하늘에는\n
가을로 가득 차 있습니다.\n

나는 아무 걱정도 없이\n
가을 속의 별들을 다 헤일 듯합니다.\n

가슴속에 하나둘 새겨지는 별을\n
이제 다 못 헤는 것은\n
쉬이 아침이 오는 까닭이요,\n
내일 밤이 남은 까닭이요,\n
아직 나의 청춘이 다하지 않은 까닭입니다.\n

별 하나에 추억과\n
별 하나에 사랑과\n
별 하나에 쓸쓸함과\n
별 하나에 동경과\n
별 하나에 시와\n
별 하나에 어머니, 어머니,\n

이네들은 너무나 멀리 있습니다.\n
별이 아스라이 멀듯이.\n

어머님,\n
그리고 당신은 멀리 북간도에 계십니다.\n

나는 무엇인지 그리워\n
이 많은 별빛이 내린 언덕 위에\n
내 이름자를 써 보고\n
흙으로 덮어 버리었습니다.\n

딴은 밤을 새워 우는 벌레는\n
부끄러운 이름을 슬퍼하는 까닭입니다.\n

그러나 겨울이 지나고 나의 별에도 봄이 오면\n
무덤 위에 파란 잔디가 피어나듯이\n
내 이름자 묻힌 언덕 위에도\n
자랑처럼 풀이 무성할 거외다.\n
(1941. 11. 5.)</string>

    <string name="title02">좋은 밤 좋은 꿈</string>
    <string name="author02">너드 커넥션</string>
    <string name="img02">goodnigth</string>
    <string name="body02">
저 많은 별을 다 세어 보아도\n
그대 마음은 헤아릴 수 없어요\n
그대의 부서진 마음 조각들이\n
차갑게 흩어져 있는 탓에\n
그댄 나의 어떤 모습들을\n
그리도 깊게 사랑했나요\n
이제 내가 해줄 수 있는 건\n
좋은 밤 좋은 꿈 안녕\n
좋은 밤 좋은 꿈 안녕\n
시월의 서늘한 공기 속에도\n
장미향을 난 느낄 수가 있죠\n
오월 어느 날에 피었던\n
빨갛던 밤을 기억하거든요\n
그댄 나의 어떤 모습들을\n
그리도 깊게 사랑했나요\n
이제 내가 해줄 수 있는 건\n
좋은 밤 좋은 꿈 안녕\n
까만 밤이 다 지나고 나면\n
이야기는 사라질 테지만\n
이름 모를 어떤 꽃말처럼\n
그대 곁에 남아 있을게요\n
나는 그대 어떤 모습들을\n
그리도 깊게 사랑했었나\n
이제 내가 해줄 수 있는 건\n
좋은 밤 좋은 꿈 안녕\n
    </string>

    <string name="triptitle01">봄의 명소</string>
    <string name="triptitle02">여름 명소</string>
    <string name="tripbody01">봄봄봄....</string>
    <string name="tripbody02">여름여름여름....</string>

</resources>