<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#ffffff"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:id="@+id/menu01"

        android:clickable="true"
        android:onClick="ShowPoem"

        android:tag="01"

        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_list">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title01"
            android:textColor="#61380b"
            android:gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author01"
            android:textColor="#2e8b57"
            android:gravity="left" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body01"
            android:textColor="#6061380B"
            android:textSize="10dp"
            android:gravity="left"
            android:ellipsize="marquee"
            android:singleLine="true"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:id="@+id/menu02"
        android:clickable="true"
        android:onClick="ShowPoem"
        android:tag="02"

        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_list">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title02"
            android:textColor="#61380b"
            android:gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author02"
            android:textColor="#2e8b57"
            android:gravity="left" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body02"
            android:textColor="#6061380B"
            android:textSize="10dp"
            android:gravity="left"
            android:ellipsize="marquee"
            android:singleLine="true"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/trip01"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:src="@drawable/spring"
            android:clickable="true"
            android:tag="01"
            android:onClick="ShowTrip"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_list"/>

        <ImageView
            android:id="@+id/trip02"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:src="@drawable/summer"
            android:clickable="true"
            android:tag="02"
            android:onClick="ShowTrip"
            android:background="@drawable/shape_list"/>

    </LinearLayout>

</LinearLayout>